[package]
name = "page-primer"
version = "0.1.0"
authors = ["Scott Lamb <slamb@slamb.org>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/scottlamb/page-primer"
description = "speeds up your program by \"priming\" memory pages from your binary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.158"
log = "0.4.7"
num_threads = "0.1.7"

[dev-dependencies]
env_logger = "0.8.4"
